--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "ioredis": "^5.3.2",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
+    "next-superjson-plugin": "^0.5.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "superjson": "^1.12.3"
   },
   "devDependencies": {
     "prisma": "^4.13.0"
