--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "ioredis": "^5.3.2",
+    "moment": "^2.29.4",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "next-superjson-plugin": "^0.5.7",
